src/scss/app.scss
@use "sass:meta";
@use 'colors';
@use 'fonts';
@use 'animations';

body {
  margin: 0;
  padding: 0;
  font-family: 'Raleway';
  background: colors.$light;
  color: colors.$dark;
  user-select: none;
}

#container {
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  #main {
    display: flex;
    align-items: center;

    #mascot {
      img {
        height: 30vw;
      }
    }

    #details {
      display: flex;
      flex-direction: column;
      align-items: center;

      #lname {
        font-size: 8vw;
        font-weight: bolder;
        letter-spacing: 13px;
      }

      #fname {
        margin-left: 10px;
        font-size: 8vw;
        font-weight: lighter;
        letter-spacing: 18px;
        line-height: 100px;
      }

      #role {
        font-size: 3vw;
        font-weight: 400;
        letter-spacing: 3px;
        margin-top: 80px;
        margin-bottom: 40px;
      }
    }
  }

  #footer {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 100px;

    #links {
      display: flex;
      justify-items: center;
      align-items: center;

      .links {
        display: flex;
        flex-direction: column;
        align-items: center;

        .tooltip {
          position: relative;
          background: colors.$dark;
          color: colors.$light;
          padding: 5px 8px;
          border-radius: 5px;
          font-size: 14px;
          visibility: hidden;

          &:after {
            content: ' ';
            position: absolute;
            bottom: -10px;
            left: 45%;
            border-width: 5px;
            border-style: solid;
            border-color: colors.$dark transparent transparent transparent;
          }
        }

        .active {
          position: relative;
          background: colors.$active;
          width: 50px;
          height: 5px;
          border-radius: 10px;
          visibility: hidden;
          top: -10px;
        }

        svg {
          width: 64px;
          height: 64px;
          box-sizing: border-box;
          padding: 10px;
          margin: 10px;
          fill: colors.$gray;
          cursor: pointer;
        }

        &:hover {
          svg {
            fill: colors.$dark;
          }

          .tooltip {
            animation: fadeIn 1s;
            visibility: visible;
          }

          .active {
            visibility: visible;
            animation: slide 0.3s;
          }
        }
      }
    }

    #contributor {
      padding-top: 20px;
      padding-left: 50px;
    }
  }
}

// breakpoints
@include meta.load-css('responsive');

